# mlonmcu

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .travis.yml  AUTHORS.html  AUTHORS.md  CITATION.cff  COMPONENTS.html  CONTRIBUTING.html  CONTRIBUTING.md  DESIGN.html  DESIGN.md  ENVIRONMENTS.html  ENVIRONMENTS.md  HISTORY.md  IREEvsTVMPlots.ipynb  LICENSE  LOGGING.html  LOGGING.md  MANIFEST.in  Makefile  Modulefile  NOTICE  POSTPROCESS.html  README.md  TODO.md  ValidationNew.md  authors.html  components.html  contributing.html  design.html  docs.html  environments.html  example_quantizer.py  freeze_litert.txt  gen_requirements.py  genindex.html  history.html  index.html  (+65 more)
.github/: ISSUE_TEMPLATE.md
_modules/: index.html
_sources/: COMPONENTS.md.txt  ENVIRONMENTS.md.txt  authors.rst.txt  components.rst.txt  docs.rst.txt  environments.rst.txt  index.rst.txt  installation.rst.txt  mlonmcu.cli.helper.rst.txt  mlonmcu.cli.rst.txt  mlonmcu.compile.rst.txt  mlonmcu.data.rst.txt  mlonmcu.environment.rst.txt  mlonmcu.flow.iree.backend.rst.txt  mlonmcu.flow.iree.rst.txt  mlonmcu.flow.rst.txt  mlonmcu.flow.tflite.backend.rst.txt  mlonmcu.flow.tflite.rst.txt  mlonmcu.flow.tflm.backend.rst.txt  mlonmcu.flow.tvm.backend.rst.txt  mlonmcu.flow.tvm.rst.txt  mlonmcu.models.rst.txt  mlonmcu.platform.espidf.rst.txt  mlonmcu.platform.microtvm.rst.txt  mlonmcu.platform.mlif.rst.txt  mlonmcu.platform.rst.txt  mlonmcu.platform.tvm.rst.txt  mlonmcu.platform.zephyr.rst.txt  mlonmcu.rst.txt  mlonmcu.session.postprocess.rst.txt  mlonmcu.session.rst.txt  mlonmcu.setup.rst.txt  mlonmcu.setup.tasks.rst.txt  mlonmcu.target.arm.rst.txt  mlonmcu.target.riscv.rst.txt  mlonmcu.target.rst.txt  mlonmcu.testing.rst.txt  modules.rst.txt
_static/: documentation_options.js
components/: AUTO_VECTORIZE.html  CMSISNNBYOC.html  MURISCVNNBYOC.html  auto_vectorize.html  cmsisnnbyoc.html  muriscvnnbyoc.html
doc/: update_docs.sh
docker/: Dockerfile  Dockerfile2  Dockerfile_arch  README.md  docker-compose.yml
docs/: COMPONENTS.md  CONTRIBUTING.md  ENVIRONMENTS.md  Makefile  POSTPROCESS.md  components.rst  conf.py  design.rst  docs.rst  environments.rst  history.rst  index.rst  logging.rst  make.bat  mlonmcu.cli.helper.rst  mlonmcu.cli.rst  mlonmcu.compile.rst  mlonmcu.context.rst  mlonmcu.data.rst  mlonmcu.environment.rst  mlonmcu.feature.rst  mlonmcu.flow.rst  mlonmcu.flow.tflite.backend.rst  mlonmcu.flow.tflite.rst  mlonmcu.flow.tflm.rst  mlonmcu.flow.tvm.backend.rst  (+12 more)
(+780 files in other folders)
