[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mlonmcu"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.8"
version = "0.8.dev0"
license = {text = "Apache-2.0"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {dev = { file = ["requirements_dev.txt"] }}

[project.scripts]
mlonmcu = "mlonmcu.cli.main:main"

[tool.setuptools_scm]
