[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mlonmcu"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.8"
# license = {text = "Apache-2.0"}  # OLD
license = "Apache-2.0"  # NEW

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements_dev.txt"] }
docs = { file = ["docs/requirements.txt"] }
ipynb = { file = ["ipynb/requirements.txt"] }
emx = { file = ["requirements_emx.txt"] }
# iree = { file = ["requirements_iree.txt"] }  # TODO: fix
# iree310 = { file = ["requirements_iree310.txt"] }  # TODO: fix

[project.scripts]
mlonmcu = "mlonmcu.cli.main:main"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["mlonmcu"]
license-files = ["LICENSE"]
